; ModuleID = '/home/carl/AnghaBench/disque/src/extr_disque-check-aof.c_readBytes.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_disque-check-aof.c_readBytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@epos = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"Expected to read %ld bytes, got %ld bytes\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @readBytes(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @ftello(i32* %9)
  store i32 %10, i32* @epos, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i64 @fread(i8* %11, i32 1, i64 %12, i32* %13)
  store i64 %14, i64* %8, align 8
  %15 = load i64, i64* %8, align 8
  %16 = load i64, i64* %7, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %22

18:                                               ; preds = %3
  %19 = load i64, i64* %7, align 8
  %20 = load i64, i64* %8, align 8
  %21 = call i32 @ERROR(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i64 %19, i64 %20)
  store i32 0, i32* %4, align 4
  br label %23

22:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %23

23:                                               ; preds = %22, %18
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32 @ftello(i32*) #1

declare dso_local i64 @fread(i8*, i32, i64, i32*) #1

declare dso_local i32 @ERROR(i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
